# kali-preload

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  DESIGN_DECISIONS.md  INSTALL.md  ISSUE1_PLAN.md  LICENSE  README.md  configure.ac  install.sh  project_status.md  reinstall.sh  setup.sh  task.md  temp.md
.github/: CONTRIBUTING.md  SECURITY.md
config/: blacklist.example  preheat.conf.default
debian/: preheat.service
docs/: SNAP_FIREFOX_ROOT_CAUSE_ANALYSIS.md  advanced-usage.md  api-reference.md  architecture.md  configuration.md  how-it-works.md  index.md  introduction.md  known-limitations.md  quick-start.md  state-file-format.md  troubleshooting.md
docs/examples/: README.md  advanced-example.md  basic-example.md
include/: common.h
man/: preheat.conf.5
scripts/: benchmark.sh  install.sh  multi_snap_test.sh  snap_firefox_debug.sh  test_markov_prediction.sh  update.sh  window_benchmark.sh
src/: Makefile.am
src/config/: blacklist.c  blacklist.h  config.c  config.h  confkeys.h
src/daemon/: daemon.c  daemon.h  main.c  pause.c  pause.h  session.c  session.h  signals.c  stats.c  stats.h
src/monitor/: proc.c  proc.h  spy.c
src/predict/: prophet.c
src/readahead/: readahead.c  readahead.h
src/state/: state.c  state.h  state_exe.c  (+9 more)
tests/: comprehensive_test.sh  edge_case_test.sh  runtime_stability_test.sh  stability_test.sh
tools/: Makefile.am  ctl_cmd_apps.c  ctl_cmd_basic.c  ctl_cmd_io.c  ctl_cmd_stats.c  ctl_commands.h  ctl_config.c  ctl_config.h  ctl_daemon.c  ctl_daemon.h  ctl_display.c  ctl_display.h  ctl_state.c  ctl_state.h  preheat-ctl.c
(+10 files in other folders)
